# llm-quickstart-tutorial

./: .env  .env.example  .gitignore  2_structured_output.py  5_input_guardrails.py  7_context.py  README.md  pyproject.toml  test.py  troll.py
llm-quickstart-tutorial/fast_mcp/: README.md  main.py  student_management_server.py
llm-quickstart-tutorial/mem0/: README.md  custom_fact_extraction_prompt.ipynb  custom_update_memory_prompt.ipynb  graph_memory.ipynb  graph_memory_tutorial.ipynb  vector_memory.ipynb  vector_memory_tutorial.ipynb
llm-quickstart-tutorial/mem0/db/: chroma.sqlite3
llm-quickstart-tutorial/neo4j/: neo4j_tutorial.ipynb
llm-quickstart-tutorial/openai_agents_sdk/: 1_basic_agent.py  3_tool_calls.py  README.md
src/fast_mcp_tutorial/: main.py  student_management.py
src/mem0_tutorial/: graph_memory_tutorial.ipynb
src/neo4j_tutorial/: neo4j_tutorial.ipynb
src/openai_agents_sdk_tutorial/: 1_basic_agent.py  4_handoffs.py  6_output_guardrails.py
