[project]
name = "openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "langchain-neo4j>=0.4.0",
    "mem0ai>=0.1.107",
    "neo4j>=5.28.1",
    "netgraph>=4.13.2",
    "networkx>=3.5",
    "openai-agents>=0.0.17",
    "rank-bm25>=0.2.2",
]
